src/test/ui/type/ascription/issue-47666.stderr
error: expected type, found reserved keyword `box`
  --> $DIR/issue-47666.rs:2:25
   |
LL |     let _ = Option:Some(vec![0, 1]);
   |                   -     ^^^^^^^^^^
   |                   |     |
   |                   |     expected type
   |                   |     in this macro invocation
   |                   |     this macro call doesn't expand to a type
   |                   help: maybe write a path separator here: `::`
   |
   = note: `#![feature(type_ascription)]` lets you annotate an expression with a type: `<expr>: <type>`
   = note: see issue #23416 <https://github.com/rust-lang/rust/issues/23416> for more information
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0423]: expected value, found enum `Option`
  --> $DIR/issue-47666.rs:2:13
   |
LL |     let _ = Option:Some(vec![0, 1]);
   |             ^^^^^^
   |
help: try using one of the enum's variants
   |
LL |     let _ = std::option::Option::None:Some(vec![0, 1]);
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^
LL |     let _ = std::option::Option::Some:Some(vec![0, 1]);
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0573]: expected type, found variant `Some`
  --> $DIR/issue-47666.rs:2:20
   |
LL |     let _ = Option:Some(vec![0, 1]);
   |                    ^^^^^^^^^^^^^^^^ not a type
   |
help: try using the variant's enum
   |
LL |     let _ = Option:std::option::Option;
   |                    ^^^^^^^^^^^^^^^^^^^
help: maybe you meant to write a path separator here
   |
LL |     let _ = Option::Some(vec![0, 1]);
   |                   ^^

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0423, E0573.
For more information about an error, try `rustc --explain E0423`.
